--- a/gmrllab/templates/contactus.html
+++ b/gmrllab/templates/contactus.html
@@ -27,56 +27,62 @@
 <div class="main_contactuspage">
     <div class="container">
         <div class="row pt-5">
-            <div class="col-3 p-2 contactus_box1 me-1">
-                <div class="icon1_contactus">
-                    <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <div class="col-3 p-2 contactus_box1 me-1 pt-3">
+                <a href="tel:+91 81388 6262 ">
+                    <div class="icon1_contactus">
 
-                        <g id="SVGRepo_bgCarrier" stroke-width="0" />
+                        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 
-                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" />
+                            <g id="SVGRepo_bgCarrier" stroke-width="0" />
 
-                        <g id="SVGRepo_iconCarrier">
-                            <path
-                                d="M2.00589 4.54166C1.905 3.11236 3.11531 2 4.54522 2H7.60606C8.34006 2 9.00207 2.44226 9.28438 3.1212L10.5643 6.19946C10.8761 6.94932 10.6548 7.81544 10.0218 8.32292L9.22394 8.96254C8.86788 9.24798 8.74683 9.74018 8.95794 10.1448C10.0429 12.2241 11.6464 13.9888 13.5964 15.2667C14.008 15.5364 14.5517 15.4291 14.8588 15.0445L15.6902 14.003C16.1966 13.3687 17.0609 13.147 17.8092 13.4594L20.8811 14.742C21.5587 15.0249 22 15.6883 22 16.4238V19.5C22 20.9329 20.8489 22.0955 19.4226 21.9941C10.3021 21.3452 2.65247 13.7017 2.00589 4.54166Z"
-                                fill="#fcfcfc" />
-                        </g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" />
 
-                    </svg>
+                            <g id="SVGRepo_iconCarrier">
+                                <path
+                                    d="M2.00589 4.54166C1.905 3.11236 3.11531 2 4.54522 2H7.60606C8.34006 2 9.00207 2.44226 9.28438 3.1212L10.5643 6.19946C10.8761 6.94932 10.6548 7.81544 10.0218 8.32292L9.22394 8.96254C8.86788 9.24798 8.74683 9.74018 8.95794 10.1448C10.0429 12.2241 11.6464 13.9888 13.5964 15.2667C14.008 15.5364 14.5517 15.4291 14.8588 15.0445L15.6902 14.003C16.1966 13.3687 17.0609 13.147 17.8092 13.4594L20.8811 14.742C21.5587 15.0249 22 15.6883 22 16.4238V19.5C22 20.9329 20.8489 22.0955 19.4226 21.9941C10.3021 21.3452 2.65247 13.7017 2.00589 4.54166Z"
+                                    fill="#fcfcfc" />
+                            </g>
 
-                </div>
+                        </svg>
+
+                    </div>
+                </a>
                 <div class="contactuspage_text1">Phone</div>
                 <a href="tel:+91 81388 6262" class="contactuspage_text2 text-dark">+91 81388 6262</a>
                 <a href="tel:0484 5647 232" class="contactuspage_text3 text-dark">0484 5647 232 </a>
 
             </div>
             <div class="col-3 p-2 contactus_box1 me-1">
-                <div class="icon1_contactus">
+                <a href="mailto:info@gmrllabs.com">
+                    <div class="icon1_contactus">
+                        <a href="mailto:info@gmrllabs.com">
+                            <svg width="28" height="28" viewBox="0 -4 32 32" version="1.1"
+                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="#000000">
 
-                    <svg width="28" height="28" viewBox="0 -4 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink"
-                        xmlns:sketch="http://www.bohemiancoding.com/sketch/ns" fill="#000000">
+                                <g id="SVGRepo_bgCarrier" stroke-width="0" />
 
-                        <g id="SVGRepo_bgCarrier" stroke-width="0" />
+                                <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" />
 
-                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" />
-
-                        <g id="SVGRepo_iconCarrier">
-                            <title>mail</title>
-                            <desc>Created with Sketch Beta.</desc>
-                            <defs> </defs>
-                            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
-                                sketch:type="MSPage">
-                                <g id="Icon-Set" sketch:type="MSLayerGroup"
-                                    transform="translate(-412.000000, -259.000000)" fill="#ffffff">
-                                    <path
-                                        d="M442,279 C442,279.203 441.961,279.395 441.905,279.578 L433,270 L442,263 L442,279 L442,279 Z M415.556,280.946 L424.58,271.33 L428,273.915 L431.272,271.314 L440.444,280.946 C440.301,280.979 415.699,280.979 415.556,280.946 L415.556,280.946 Z M414,279 L414,263 L423,270 L414.095,279.578 C414.039,279.395 414,279.203 414,279 L414,279 Z M441,261 L428,271 L415,261 L441,261 L441,261 Z M440,259 L416,259 C413.791,259 412,260.791 412,263 L412,279 C412,281.209 413.791,283 416,283 L440,283 C442.209,283 444,281.209 444,279 L444,263 C444,260.791 442.209,259 440,259 L440,259 Z"
-                                        id="mail" sketch:type="MSShapeGroup"> </path>
+                                <g id="SVGRepo_iconCarrier">
+                                    <title>mail</title>
+                                    <desc>Created with Sketch Beta.</desc>
+                                    <defs> </defs>
+                                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"
+                                        sketch:type="MSPage">
+                                        <g id="Icon-Set" sketch:type="MSLayerGroup"
+                                            transform="translate(-412.000000, -259.000000)" fill="#ffffff">
+                                            <path
+                                                d="M442,279 C442,279.203 441.961,279.395 441.905,279.578 L433,270 L442,263 L442,279 L442,279 Z M415.556,280.946 L424.58,271.33 L428,273.915 L431.272,271.314 L440.444,280.946 C440.301,280.979 415.699,280.979 415.556,280.946 L415.556,280.946 Z M414,279 L414,263 L423,270 L414.095,279.578 C414.039,279.395 414,279.203 414,279 L414,279 Z M441,261 L428,271 L415,261 L441,261 L441,261 Z M440,259 L416,259 C413.791,259 412,260.791 412,263 L412,279 C412,281.209 413.791,283 416,283 L440,283 C442.209,283 444,281.209 444,279 L444,263 C444,260.791 442.209,259 440,259 L440,259 Z"
+                                                id="mail" sketch:type="MSShapeGroup"> </path>
+                                        </g>
+                                    </g>
                                 </g>
-                            </g>
-                        </g>
 
-                    </svg>
-                </div>
+                            </svg>
+
+                    </div>
+                </a>
                 <div class="contactuspage_text1">Email</div>
                 <a href="mailto:info@gmrllabs.com" class="contactuspage_text2 text-dark">info@gmrllabs.com</a>
             </div>
