--- a/gmrllab/templates/nav_and_footer/navbar.html
+++ b/gmrllab/templates/nav_and_footer/navbar.html
@@ -2,6 +2,101 @@
 <a href="https://api.whatsapp.com/send?phone=+918138862626&text=Hello" class="whatsapp_icon">
     <img src="{% static 'icons/icons8-whatsapp.svg' %}" class="whatsapp-icon" alt="">
 </a>
+<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel"
+    style="background-color: blue;">
+    <div class="offcanvas-header">
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body px-0">
+        <nav id="offcanvasNav" class="navbar-custom navbar pt-0 navbar-expand-lg">
+            <div class="container-fluid px-0  nav_containe  ">
+                <ul class=" navbar-nav w-100">
+                    <li class="nav-item w-100">
+                        <a class="nav-link active" aria-current="page" href="{% url 'aboutus' %}">&nbsp;&nbsp;ABOUT US</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="{% url 'frond:tests' %}">&nbsp;&nbsp;TESTS</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'package' %}">&nbsp;&nbsp;PACKAGES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'blog' %}">&nbsp;&nbsp;BLOG</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'gallery' %}">&nbsp;&nbsp;GALLERY</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'branch' %}">&nbsp;&nbsp;BRANCHES</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'form:contactform' %}">&nbsp;&nbsp;CONTACT US</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</div>
+
+<!-- Main Content -->
+<div class="main overflow-hidden">
+    <div class="container-fluid main_contain p-0">
+        <div class="row main_row">
+            <div class="col-12 nav_co_text1 position-relative">
+                <div class="fb-ico">
+                    <i class="fab fa-facebook-f pe-3"></i>
+                    <i class="fab fa-twitter pe-3"></i>
+                    <i class="fab fa-linkedin-in pe-3"></i>
+                    <i class="fab fa-instagram pe-3"></i>
+                </div>
+                <div class="makeappointment p-2">Make An Appointment</div>
+            </div>
+            <div class="col-12">
+                <nav id="navbar" class="navbar pt-0 navbar-expand-lg bg-body-tertiary">
+                    <div id="nav_contain" class="container-fluid rounded-1 nav_contain bg-white my-auto">
+                        <a class="navbar-brand" href="{% url 'home' %}">
+                            <img src="{% static 'icons/gmrl-logo.svg' %}" alt="Logo" class="d-inline-block align-text-top">
+                        </a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <!-- Navbar items -->
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav">
+                                <li class="nav-item ">
+                                    <a class="nav-link text-center active " aria-current="page" href="{% url 'aboutus' %}">ABOUT
+                                        US</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-center" href="{% url 'frond:tests' %}">TESTS</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-center" href="{% url 'package' %}">PACKAGES</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-center" href="{% url 'blog' %}">BLOG</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-center" href="{% url 'gallery' %}">GALLERY</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-center" href="{% url 'branch' %}">BRANCHES</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-center" href="{% url 'form:contactform' %}">CONTACT US</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% comment %}
 <div class="main overflow-hidden">
     <div class="container-fluid main_contain p-0 ">
         <div class="row main_row ">
@@ -33,22 +128,22 @@
                                         href="{% url 'aboutus' %}">ABOUT US</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-center" href="{% url 'frond:tests' %}">TESTS</a>
+                                    <a class="nav-link text-center" href="{% url 'aboutus' %}{% url 'frond:tests' %}{% url 'package' %}">TESTS</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-center" href="{% url 'package' %}">PACKAGES</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-center" href="{% url 'blog' %}">BLOG</a>
+                                    <a class="nav-link text-center" href="{% url 'aboutus' %}{% url 'frond:tests' %}{% url 'package' %}{% url 'blog' %}">BLOG</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-center" href="{% url 'gallery' %}">GALLERY</a>
+                                    <a class="nav-link text-center" href="{% url 'aboutus' %}{% url 'frond:tests' %}{% url 'package' %}{% url 'blog' %}{% url 'gallery' %}">GALLERY</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-center" href="{% url 'branch' %}">BRANCHES</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-center" href="{% url 'form:contactform' %}">CONTACT US</a>
+                                    <a class="nav-link text-center" href="{% url 'branch' %}{% url 'form:contactform' %}">CONTACT US</a>
                                 </li>
                             </ul>
                         </div>
@@ -57,4 +152,4 @@
             </div>
         </div>
     </div>
-</div>
+</div> {% endcomment %}
